SCA_0.99.13: Rename exported function names and arguments
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/SomaticCancerAlterations@2463 db2202da-8704-0410-b924-b125b3cd84ef

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,4 @@ importFrom(exomeCopy, subdivideGRanges)
 importFrom(stringr, str_match)
 importFrom(IRanges, IRanges)
 
-export(sca_list_datasets, sca_load_datasets, sca_metadata, mutation_density)
+export(scaListDatasets, scaLoadDatasets, scaMetadata, mutationDensity)
