--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 0.99.14
+Version: 0.99.15
 Date: 2013-09-27
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <julian.gehring@embl.de>
 Imports: GenomicRanges, exomeCopy, stringr, IRanges
 Depends: R (>= 3.0.0)
-Suggests: testthat, ggbio, BiocStyle
+Suggests: testthat, ggbio, ggplot2, BiocStyle
 Description: Collection of somatic cancer alteration datasets
 License: GPL-3
 LazyLoad: yes
