SCA_0.99.17: add 'seqchr', split helper functions
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/SomaticCancerAlterations@2467 db2202da-8704-0410-b924-b125b3cd84ef

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ importFrom(IRanges, elementLengths)
 importFrom(exomeCopy, subdivideGRanges)
 importFrom(stringr, str_match)
 importFrom(IRanges, IRanges)
-
-export(scaListDatasets, scaLoadDatasets, scaMetadata, mutationDensity)
+ 
+exportPattern("^[^\\.]")
