--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
 Version: 0.99.21
-Date: 2013-10-19
+Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <julian.gehring@embl.de>
 Imports: GenomicRanges, exomeCopy, stringr, IRanges
@@ -14,3 +14,4 @@ Description: Collection of somatic cancer alteration datasets
 License: GPL-3
 LazyLoad: yes
 biocViews: ExperimentData, Cancer
+Encoding: UTF-8
