--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
-
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.3.0
+Version: 1.3.1
 Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <julian.gehring@embl.de>
@@ -13,5 +12,5 @@ VignetteBuilder: knitr
 Description: Collection of somatic cancer alteration datasets
 License: GPL-3
 LazyLoad: yes
-biocViews: ExperimentData, Cancer
+biocViews: ExperimentData, Genome, CancerData, 1000genomes, NCI
 Encoding: UTF-8
