--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.3.1
+Version: 1.3.2
 Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <julian.gehring@embl.de>
@@ -12,5 +12,5 @@ VignetteBuilder: knitr
 Description: Collection of somatic cancer alteration datasets
 License: GPL-3
 LazyLoad: yes
-biocViews: ExperimentData, Genome, CancerData, 1000genomes, NCI
+biocViews: ExperimentData, Genome, CancerData, Project1000genomes, NCI
 Encoding: UTF-8
