--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.7.1
+Version: 1.7.2
 Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <julian.gehring@embl.de>
-Imports: GenomicRanges, exomeCopy, stringr, IRanges
+Imports: GenomicRanges, exomeCopy, stringr, IRanges, S4Vectors
 Depends: R (>= 3.0.0)
 Suggests: testthat, ggbio, ggplot2, BiocStyle, knitr
 VignetteBuilder: knitr
