--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Somatic Cancer Alterations
 Version: 1.7.2
 Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
-Maintainer: Julian Gehring <julian.gehring@embl.de>
+Maintainer: Julian Gehring <jg-bioc@gmx.com>
 Imports: GenomicRanges, exomeCopy, stringr, IRanges, S4Vectors
 Depends: R (>= 3.0.0)
 Suggests: testthat, ggbio, ggplot2, BiocStyle, knitr
