--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.6.0
+Version: 1.6.1
 Date: 2014-01-18
 Author: Julian Gehring (EMBL Heidelberg)
-Maintainer: Julian Gehring <julian.gehring@embl.de>
+Maintainer: Julian Gehring <jg-bioc@gmx.com>
 Imports: GenomicRanges, exomeCopy, stringr, IRanges
 Depends: R (>= 3.0.0)
-Suggests: testthat, ggbio, ggplot2, BiocStyle, knitr
+Suggests: testthat, ggbio, ggplot2, knitr
 VignetteBuilder: knitr
 Description: Collection of somatic cancer alteration datasets
 License: GPL-3
