--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.7.2
-Date: 2014-01-18
+Version: 1.7.4
 Author: Julian Gehring (EMBL Heidelberg)
 Maintainer: Julian Gehring <jg-bioc@gmx.com>
 Imports: GenomicRanges, exomeCopy, stringr, IRanges, S4Vectors
 Depends: R (>= 3.0.0)
-Suggests: testthat, ggbio, ggplot2, BiocStyle, knitr
+Suggests: testthat, ggbio, ggplot2, knitr
 VignetteBuilder: knitr
 Description: Collection of somatic cancer alteration datasets
 License: GPL-3
