--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: SomaticCancerAlterations
 Type: Package
 Title: Somatic Cancer Alterations
-Version: 1.27.0
-Author: Julian Gehring (EMBL Heidelberg)
+Version: 1.27.1
+Author: Julian Gehring
 Maintainer: Julian Gehring <jg-bioc@gmx.com>
-Imports: GenomicRanges, exomeCopy, stringr, IRanges, S4Vectors
+Imports: GenomicRanges, IRanges, S4Vectors
 Depends: R (>= 3.0.0)
 Suggests: testthat, ggbio, ggplot2, knitr
 VignetteBuilder: knitr
